--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ignore bundler config.
 /.bundle
 
+# .gitignore
+node_modules/
+
 # Ignore all environment files (except templates).
 /.env*
 !/.env*.erb
@@ -37,4 +40,4 @@
 /app/assets/builds/*
 !/app/assets/builds/.keep
 
-node_modules/
+
