--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
-  - name: Ansar-Database
-    databaseName: ansar_database
-    user: ansar_database_user
+  - name: fixmate
+    databaseName: fixmate_wgrg
+    user: fixmate
 
 services:
   - type: web
@@ -12,7 +12,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: Ansar-Database
+          name: fixmate_wgrg
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
